--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,3 +1,96 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Modal design */
+
+.modal.show {
+  display: block;
+  opacity: 1;
+}
+
 .modal {
   display: none;
+  border: 2px solid darkgray;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 30px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  max-width: 600px;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  color: white;
+}
+
+.modal h3 {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.modal label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.modal label input {
+  width: calc(100% - 10px);
+  padding: 5px;
+}
+
+.modal button {
+  display: inline-block;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+}
+
+.modal button:hover {
+  opacity: 0.5;
+  transition: 0.5s ease;
+}
+.modal button:active {
+  background-color: #003a6d;
+}
+
+.modal button:last-child {
+  margin-right: 0;
+}
+
+.modal input {
+  background-color: #ccc;
+  margin-top: 8px;
+}
+.registerButtonWrapper {
+  display: flex;
+  justify-content: space-between;
+}
+/* Message Box design*/
+.messageBox {
+  display: none;
+  position: fixed;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  border-radius: 10px;
+  z-index: 9999;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+/* !Я не уверен что получилось корректно применить постепенное появление и исчезновение message box,нужно тестирование */
+/*?По хорошему этот дизайн повторяется у окна регистрации и у окна сообщения, надо куда нибудь в переменные записать,но мне лень,можно этим заняться потом */
+.messageBox.show {
+  display: block;
+  opacity: 1;
 }
