--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -11,10 +11,10 @@
   opacity: 1;
 }
 
-
 .modal {
   display: none;
   border: 2px solid darkgray;
+  backdrop-filter: blur(20px);
   position: fixed;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 15px;
@@ -97,7 +97,7 @@
 }
 
 nav {
-  height: 10vh;
+  padding: 10px;
   background-color: rgb(56, 55, 55);
   display: flex;
   justify-content: space-between;
@@ -152,3 +152,7 @@ h2 {
   margin: 0 auto;
   width: 50%;
 } */
+
+.login-modal {
+  display: none;
+}
