--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -106,6 +106,14 @@
   opacity: 1;
 }
 
+#user-nav {
+  color: white;
+}
+
+.block {
+  display: block;
+}
+
 nav {
   padding: 10px;
   background-color: rgb(56, 55, 55);
